@@ -343,21 +343,14 @@
                     </archive>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>
-                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</arg>
-                    </compilerArgs>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
